added new stuff

--- a/css/index.css
+++ b/css/index.css
@@ -2,3 +2,18 @@ html{
     margin: 0;
     padding: 0;
 }
+
+body cos{
+    margin-left: 100px;
+}
+
+img{
+    width: 20%;
+}
+
+p{
+    margin-left: 400px;
+    margin-top: -200px;
+    padding-bottom: 200px;
+}
+
